--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -147,6 +147,7 @@ body {
 	margin-right: 10px;
 	border-radius: 100px;
 	line-height: 28px;
+	min-width: 20px;
 }
 
 code {
@@ -194,6 +195,7 @@ code {
 .section-paragraph {
 	font-size: 18px;
 	font-weight: 300;
+	margin: 0;
 }
 
 .section-list {
@@ -224,8 +226,7 @@ code {
 	border-radius: 5px;
 	padding: 20px;
 	margin: 20px;
-	background: #fffefd;
-	background-color: #fbfbfb;
+	background-color: #fafafa;
 	overflow: auto;
 	-webkit-overflow-scrolling: touch;
 }
@@ -272,7 +273,7 @@ code {
 
 @media (max-width: 850px) {
 	.header-nav {
-		font-size: 14px;
+		font-size: 15px;
 	}
 	.header-cont {
 		padding: 5px 20px;
@@ -317,6 +318,7 @@ code {
 	}
 	.section-title {
 		margin-top: 20px;
+		margin-bottom: 10px;
 		font-size: 20px;
 	}
 	.section-paragraph {
@@ -330,6 +332,14 @@ code {
 	}
 	.code-block {
 		font-size: 13px;
+	}
+	code {
+		font-size: 85%;
+	}
+
+	.code-block-cont,
+	.video-cont {
+		margin: 10px 0;
 	}
 }
 
