update: Re-work landing page, add install section

--- a/website/css/pre.styles.css
+++ b/website/css/pre.styles.css
@@ -185,8 +185,8 @@ code {
 
 .code-block-cont {
 	border-radius: 5px;
-	padding: 20px;
-	margin: 20px;
+	padding: 12px 15px;
+	margin: 20px 0;
 	background-color: #fafafa;
 	overflow: auto;
 	-webkit-overflow-scrolling: touch;
@@ -196,7 +196,7 @@ code {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: 20px;
+	margin: 20px 0;
 }
 
 .video {
