update: Add more resize breakpoints, wrap notes in a footer tag

--- a/website/css/pre.styles.css
+++ b/website/css/pre.styles.css
@@ -132,8 +132,7 @@ code {
 	border-radius: 3px;
 	padding: 0 3px;
 	font-size: 85%;
-	font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, Courier,
-		monospace;
+	font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 	display: inline-block;
 }
 
@@ -282,6 +281,19 @@ code {
 	display: none;
 }
 
+.footer {
+	padding-bottom: 50px;
+}
+
+@media (max-width: 1100px) {
+	.main-cont {
+		width: 90%;
+	}
+	.topic {
+		width: 90%;
+	}
+}
+
 @media (max-width: 950px) {
 	.header-nav {
 		font-size: 15px;
@@ -290,7 +302,7 @@ code {
 		padding: 5px 20px;
 	}
 	.main-cont {
-		width: 100%;
+		/*width: 100%;*/
 		padding: 20px;
 		margin: auto;
 	}
@@ -310,7 +322,7 @@ code {
 		justify-content: flex-start;
 		align-items: flex-start;
 		padding-left: 20px;
-		width: 100%;
+		/*width: 100%;*/
 	}
 	.topic-title {
 		font-size: 28px;
@@ -342,6 +354,15 @@ code {
 	.code-block-cont,
 	.video-cont {
 		margin: 10px 0;
+	}
+}
+
+@media (max-width: 700px) {
+	.main-cont {
+		width: 100%;
+	}
+	.topic {
+		width: 100%;
 	}
 }
 
