update: Add .unselectable class, minor changes to breakpoints

--- a/website/css/pre.styles.css
+++ b/website/css/pre.styles.css
@@ -281,16 +281,23 @@ code {
 	display: none;
 }
 
+.unselectable {
+	user-select: none;
+}
+
 .footer {
 	padding-bottom: 50px;
 }
 
 @media (max-width: 1100px) {
-	.main-cont {
-		width: 90%;
-	}
+	.main-cont,
 	.topic {
 		width: 90%;
+	}
+
+	.header-nav {
+		width: 100%;
+		/* width: 800px; */
 	}
 }
 
@@ -358,9 +365,8 @@ code {
 }
 
 @media (max-width: 700px) {
-	.main-cont {
-		width: 100%;
-	}
+	.header-nav,
+	.main-cont,
 	.topic {
 		width: 100%;
 	}
