update: Update website message to match README.md

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -211,8 +211,8 @@ code {
 }
 
 .link {
-	color: #0d61cb;
-	color: #0088cc;
+	/*color: #0d61cb;*/
+	color: #0088cc !important;
 	text-decoration: none;
 }
 
