--- a/website/css/pre.styles.css
+++ b/website/css/pre.styles.css
@@ -22,7 +22,8 @@ body {
 }
 
 .nav-logo {
-	background: #699935;
+	/*background: #699935;*/
+	background: #444444;
 	width: 20px;
 	height: 20px;
 	border-radius: 400px 1000px 0 1000px;
@@ -232,13 +233,12 @@ body {
 
 .topic-title-text {
 	font-size: 41px;
-	font-family: "Rubik", sans-serif;
+	font-family: "Inter", sans-serif;
 	font-weight: 300;
-	letter-spacing: -3px;
+	letter-spacing: -2px;
 }
 
 .topic-title-side {
-	font-family: "Rubik", sans-serif;
 	font-weight: 300;
 	font-size: 12px;
 	color: #909090;
@@ -247,7 +247,6 @@ body {
 }
 
 .topic-description {
-	font-family: "Rubik", sans-serif;
 	margin-top: -5px;
 	font-size: 18px;
 	font-weight: 200;
@@ -264,6 +263,10 @@ body {
 
 .bold4 {
 	font-weight: 400;
+}
+
+.bold8 {
+	font-weight: 800;
 }
 
 .bold {
@@ -286,8 +289,9 @@ body {
 }
 
 code {
-	background: #fff5cc;
-	color: #71471c;
+	/*background: #fff5cc;*/
+	background: #f2f2f2;
+	/*color: #71471c;*/
 	margin: 0;
 	border-radius: 3px;
 	padding: 0 3px;
