chore: Cleanup gui/

--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -9,17 +9,13 @@
 			name="viewport"
 			content="width=device-width,initial-scale=1,shrink-to-fit=no"
 		/>
-		<link href="app.css" rel="stylesheet" />
-		<script src="interaction.js"></script>
-		<script src="funnel.js"></script>
-		<script src="app.js"></script>
+		<link href="../css/app.css" rel="stylesheet" />
+		<script src="../js/libs/interaction.js"></script>
+		<script src="../js/libs/funnel.js"></script>
+		<script src="../js/app.js"></script>
 	</head>
 
-	<!-- <body class="noselect" onclick="api.clickBody(this)"> -->
 	<body class="noselect">
-		<!-- <button onclick="api.callback()"> Run JavaScript </button> -->
-		<!-- <button onclick="api.callback()"> Run Command </button> -->
-
 		<div class="wrapper">
 			<div class="status">
 				<div class="status-left">
@@ -155,28 +151,5 @@
 				</div>
 			</div>
 		</div>
-
-		<!-- <div style="display: none;">
-	<style>button{width: 220px;}</style>
-	<h1 style="text-align: center; margin: 0;">nodecliac</h1>
-	<fieldset style="text-align: center;">
-	  <legend>Commands</legend>
-	  <button onclick="api.cnShow()">Show selected</button>
-	  <button onclick="api.cnListInstalled()">List Installed</button>
-	  <button onclick="api.cnListAll()">List All</button>
-	  <br>
-	  <button onclick="api.cnSelect()">Choose</button>
-	  <button onclick="api.cnUpdate()">Update</button>
-	  <button onclick="api.cnInstall()">Install</button>
-	  <button onclick="api.cnRegistry()">Registry</button>
-	  <button onclick="api.cnClear()">Clear</button>
-	</fieldset>
-	<br>
-	<fieldset>
-	  <legend>Results</legend>
-	  <div id="versions"></div>
-	</fieldset>
-</div>
- -->
 	</body>
 </html>
