chore: Tidy up views (gui html)

--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -107,7 +107,9 @@
 								<div class="vi-label-header">Name?</div>
 							</div>
 							<div class="">
-								<div class=""><input class="search-input"></div>
+								<div class="">
+									<input class="search-input" />
+								</div>
 							</div>
 						</div>
 						<div class="vi-row">
