--- a/gui/views/about.html
+++ b/gui/views/about.html
@@ -13,17 +13,14 @@
 	</head>
 
 	<body class="noselect">
-
 		<div class="wrapper">
-
-				<div class="title">nodecliac GUI</div>
-				<div class="logo-cont"><img class="logo" src="LOGO2.png"></div>
-				<div class="">Copyright © 2019-2020</div>
-				<div class="">Carlos Gabriel (@cgabriel5)</div>
-				<div class="">v0.0.1</div>
-
-
+			<div class="title">nodecliac GUI</div>
+			<div class="logo-cont">
+				<img class="logo" src="../resources/images/LOGO2.png" />
+			</div>
+			<div class="">Copyright © 2019-2020</div>
+			<div class="">Carlos Gabriel (@cgabriel5)</div>
+			<div class="">v0.0.1</div>
 		</div>
-
 	</body>
 </html>
