update: Bring back empty.css to make webgui play nice with macos

--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -9,7 +9,7 @@
 			name="viewport"
 			content="width=device-width,initial-scale=1,shrink-to-fit=no"
 		/>
-		<!-- <link href="../css/main.css" rel="stylesheet" /> -->
+		<link href="../css/main.css" rel="stylesheet" />
 		<script src="../js/libs/interaction.js"></script>
 		<script src="../js/libs/funnel.js"></script>
 		<script src="../js/app.js"></script>
