--- a/gui/css/main.css
+++ b/gui/css/main.css
@@ -1,3 +1,9 @@
 @charset "UTF-8";
 @import "../css/sanitize.css";
-@import "../css/app.css";
+@import "../css/overrides.css";
+@import "../css/base.css";
+@import "../css/classes.css";
+@import "../css/interfaces.css";
+@import "../css/components/sidebar.css";
+@import "../css/components/packages.css";
+@import "../css/components/statusbar.css";
