--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -16,22 +16,20 @@
 	</head>
 
 	<body class="noselect">
-		<div class="wrapper">
+		<div id="app" class="app">
 			<div class="status">
-				<div class="status-left">
+				<div class="left">
 					<div><span class="bold">nodecliac</span> v0.0.1</div>
 					<div class="button-light update-btn">Update nodecliac</div>
 				</div>
-
-				<div class="status-right">
+				<div class="right">
 					<div>
 						<span
 							><a
-								id="link_github_repo"
-								href="https://github.com/cgabriel5/nodecliac"
-								target="_blank"
 								class="link"
-								onclick="api.openURL()"
+								target="_blank"
+								onclick="api.open(this.href)"
+								href="https://github.com/cgabriel5/nodecliac"
 								>GitHub</a
 							></span
 						>
@@ -39,115 +37,82 @@
 				</div>
 			</div>
 
-			<div class="main">
-				<div class="sidebar">
-					<div class="header">
-						<div class="arrow-cont">
+			<div id="main" class="main">
+				<div id="sidebar" class="sidebar">
+					<div class="row">
+						<div class="icon-cont">
 							<div class="arrow-down"></div>
 						</div>
 						<div>Packages</div>
 					</div>
+
 					<div class="menu">
-						<div class="menu-item">
-							<div class="menu-title">
-								<div class="menu-icon"></div>
+						<div class="item">
+							<div class="title">
+								<div class="icon"></div>
 								<div>Installed</div>
 							</div>
-							<div class="menu-right">14</div>
+							<div class="right">14</div>
 						</div>
-						<div class="menu-item">
-							<div class="menu-title">
-								<div class="menu-icon"></div>
+						<div class="item">
+							<div class="title">
+								<div class="icon"></div>
 								<div>Outdated</div>
 							</div>
-							<div class="menu-right">1</div>
+							<div class="right">1</div>
 						</div>
-						<div class="menu-item">
-							<div class="menu-title">
-								<div class="menu-icon"></div>
+						<div class="item">
+							<div class="title">
+								<div class="icon"></div>
 								<div>Available</div>
 							</div>
-							<div class="menu-right">1230</div>
+							<div class="right">1230</div>
 						</div>
 					</div>
 
-					<div class="header">
-						<div class="arrow-cont">
-							<div class="arrow-right"></div>
-						</div>
-						<div>Create Package</div>
-					</div>
-
-					<div class="header">
-						<div class="arrow-cont">
+					<div class="row">
+						<div class="icon-cont">
 							<div class="arrow-right"></div>
 						</div>
 						<div>Settings</div>
 					</div>
 
-					<div class="header">
-						<div class="arrow-cont">
-							<div class="arrow-right"></div>
-						</div>
-						<div>Update</div>
-					</div>
-
-					<div class="header" id="about" onclick="api.showAbout()">
-						<div class="arrow-cont noselect opa0">
+					<div class="row" id="about" onclick="api.about()">
+						<div class="icon-cont noselect opa0">
 							<div class="arrow-right"></div>
 						</div>
 						<div>About</div>
 					</div>
 				</div>
 
-				<div class="content">
-					<div id="view" class="view">
-						<div class="vi-row-header">
-							<div class="">
-								<div class="vi-label-header">Name?</div>
-							</div>
-							<div class="">
-								<div class="">
-									<input class="search-input" />
-								</div>
-							</div>
-						</div>
-						<div class="vi-row">
-							<div class="vi-label">balena</div>
-						</div>
-						<div class="vi-row">
-							<div class="vi-label">nodecliac</div>
-						</div>
-						<div class="vi-row">
-							<div class="vi-label">npm</div>
-						</div>
-					</div>
+				<div id="content" class="content">
+					<div id="view" class="view"></div>
 
 					<div class="pkg-info">
-						<div class="pi-row">
-							<div class="pi-label-header">
+						<div class="row">
+							<div class="header">
 								Completion Package Information
 							</div>
 						</div>
-						<div class="pi-row">
-							<div class="pi-label">Name:</div>
-							<div class="pi-value">--</div>
+						<div class="row">
+							<div class="label">Name:</div>
+							<div class="value">--</div>
 						</div>
-						<div class="pi-row">
-							<div class="pi-label">Description:</div>
-							<div class="pi-value">--</div>
+						<div class="row">
+							<div class="label">Description:</div>
+							<div class="value">--</div>
 						</div>
-						<div class="pi-row">
-							<div class="pi-label">Author:</div>
-							<div class="pi-value">--</div>
+						<div class="row">
+							<div class="label">Author:</div>
+							<div class="value">--</div>
 						</div>
-						<div class="pi-row">
-							<div class="pi-label">Repository:</div>
-							<div class="pi-value">--</div>
+						<div class="row">
+							<div class="label">Repository:</div>
+							<div class="value">--</div>
 						</div>
-						<div class="pi-row">
-							<div class="pi-label">Version:</div>
-							<div class="pi-value">--</div>
+						<div class="row">
+							<div class="label">Version:</div>
+							<div class="value">--</div>
 						</div>
 					</div>
 				</div>
