--- a/gui/views/about.html
+++ b/gui/views/about.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>nodecliac</title>
 		<meta charset="utf-8" />
-		<meta name="description" content="nodecliac GUI" />
+		<meta name="description" content="nodecliac GUI (About)" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta
 			name="viewport"
@@ -13,14 +13,14 @@
 	</head>
 
 	<body class="noselect">
-		<div class="wrapper">
+		<div class="app">
 			<div class="title">nodecliac GUI</div>
 			<div class="logo-cont">
 				<img class="logo" src="../resources/images/LOGO2.png" />
 			</div>
-			<div class="">Copyright © 2019-2020</div>
-			<div class="">Carlos Gabriel (@cgabriel5)</div>
-			<div class="">v0.0.1</div>
+			<div>Copyright © 2019-2020</div>
+			<div>Carlos Gabriel (@cgabriel5)</div>
+			<div>v0.0.1</div>
 		</div>
 	</body>
 </html>
