--- a/gui/css/components/sidebar.css
+++ b/gui/css/components/sidebar.css
@@ -1,5 +1,3 @@
-/* Sidebar */
-
 .sidebar {
 	background: #fbfafc;
 	min-width: 325px;
@@ -9,10 +7,64 @@
 	overflow: auto;
 }
 
-.sidebar .icon-cont {
+.sb-row {
+	display: flex;
+	flex-flow: row nowrap;
+	color: #333333;
+	font-weight: bold;
+	padding: 7px 7px 7px 15px;
+}
+
+.sb-row:hover {
+	background: rgba(0, 0, 0, 0.035);
+}
+
+.sb-row-icon-cont {
 	display: block;
 	margin-right: 10px;
 }
+
+.entry-item {
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-between;
+	padding: 5px 0 5px 40px;
+	width: 100%;
+}
+
+.entry-item:hover {
+	background: rgba(0, 0, 0, 0.035);
+}
+
+.item-active {
+	background: #327dff;
+	color: #ffffff;
+	border-radius: 5px;
+}
+
+.entry-icon {
+	display: none;
+	background-image: url("file_type_text@3x.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	width: 30px;
+	height: 30px;
+	margin-right: 15px;
+}
+
+.entry-count {
+	padding: 2px 10px;
+	border-radius: 20px;
+	background: #327dff;
+	background: #a9b8d3;
+	color: white;
+	font-weight: bold;
+	font-size: 17px;
+	margin-right: 15px;
+}
+
+/* Sidebar icon CSS arrows */
 
 /* [https://css-tricks.com/snippets/css/css-triangle/] */
 .arrow-right {
@@ -30,62 +82,4 @@
 	border-left: 7px solid transparent;
 	border-right: 7px solid transparent;
 	border-top: 9px solid #7e7d7e;
-}
-
-.sidebar .row {
-	display: flex;
-	flex-flow: row nowrap;
-	color: #333333;
-	font-weight: bold;
-	padding: 7px 7px 7px 15px;
-}
-
-.sidebar .row:hover {
-	background: rgba(0, 0, 0, 0.035);
-}
-
-.sidebar .menu .item {
-	display: flex;
-	flex-flow: row nowrap;
-	justify-content: space-between;
-	padding: 5px 0 5px 40px;
-	width: 100%;
-}
-
-.sidebar .menu .item:hover {
-	background: rgba(0, 0, 0, 0.035);
-}
-
-.sidebar .menu .item-active {
-	background: #327dff;
-	color: #ffffff;
-	border-radius: 5px;
-}
-
-.sidebar .menu .title {
-	display: flex;
-	flex-flow: row nowrap;
-	justify-content: start;
-}
-
-.sidebar .menu .icon {
-	display: none;
-	background-image: url("file_type_text@3x.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-	width: 30px;
-	height: 30px;
-	margin-right: 15px;
-}
-
-.sidebar .menu .item .right {
-	padding: 2px 10px;
-	border-radius: 20px;
-	background: #327dff;
-	background: #a9b8d3;
-	color: white;
-	font-weight: bold;
-	font-size: 17px;
-	margin-right: 15px;
 }
